<resources>
    <string name="app_name">Aplikacja_Mobilna_PJ</string>
    <string name="tak">Tak</string>
    <string name="nie">Nie</string>
    <string name="zapisz">Zapisz</string>
    <string name="resetuj">Resetuj</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="wyjdż">Wyjdź</string>
    <string name="hasło">Hasło</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="jestok">Poprawnie dodano pozycję!</string>


    <string name="witaj">Witaj!</string>
    <string name="zalogujsie">Zaloguj się do systemu, by rozpocząć pracę! :)</string>

    <string name="co1">Co chcesz zrobić?</string>
    <string name="serwis">Rozpocznij usługę serwisu</string>

    <string name="sklep">Wybierz miejsce serwisu:</string>

    <string name="spis">Stwórz spis użytych zestawów:</string>
    <string name="a">ZESTAW ŚRUB 01</string>
    <string name="b">ZESTAW PODKŁADEK I NAKRĘTEK 02</string>
    <string name="c">ZESTAW ZACISKÓW WÓZKOWYCH 03</string>
    <string name="d">ZESTAW MAGNESÓW 04</string>
    <string name="e">ZESTAW NAPRAWCZY UKŁADU JEZDNEGO 05</string>
    <string name="f">ZESTAW NAPRAWCZY UKŁADU HAMULCOWEGO 06</string>
    <string name="g">ZESTAW NAPRAWCZY UKŁADU CHŁODZENIA 07</string>
    <string name="h">ZESTAW PRĘTÓW I WSPORNIKÓW WÓZKOWYCH 08</string>

    <string name="dane">Czy wszystkie dane są poprawne?</string>


</resources>
