<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jaskiewicz.piotr.aplikacja.Menu1"
    android:background="#01b3eb">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView3"
            android:gravity="center_vertical|center_horizontal"
            android:padding="40dp"
            android:textColor="#FFFFFF"
            android:textSize="45dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/co1"
            android:id="@+id/text_top"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:textSize="32dp"
            android:textStyle="italic"
            android:theme="@style/Base.Animation.AppCompat.DropDownUp"
            android:gravity="center_vertical|center_horizontal|top" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/serwis"
            android:id="@+id/button"
            android:layout_below="@+id/text_top"
            android:layout_marginTop="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textColor="#ffffff"
            android:background="#0d8eb6"
            android:padding="1dp"
            android:clickable="false"
            android:onClick="startWork"
            android:textSize="25dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/wyloguj"
            android:id="@+id/button3"
            android:textColor="#ffffff"
            android:background="#0d8eb6"
            android:padding="1dp"
            android:clickable="false"
            android:textSize="25dp"
            android:onClick="logOut" />

    </TableLayout>
</RelativeLayout>
