<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jaskiewicz.piotr.aplikacja.Menu3"
    android:background="#01b3eb"
    android:nestedScrollingEnabled="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/spis"
                android:id="@+id/textView10"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="#ffffff"
                android:padding="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/a"
                android:id="@+id/textView11"
                android:paddingRight="15dp"
                android:textSize="18dp"
                android:textColor="#ffffff"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="15dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:id="@+id/button7"
                    android:onClick="decreaseInteger1" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="0"
                        android:id="@+id/text1"
                        android:layout_column="2"
                        android:numeric="integer"
                        android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:background="#2986a4" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/button8"
                    android:onClick="increaseInteger1" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/b"
                android:id="@+id/textView13"
                android:textColor="#ffffff"
                android:elegantTextHeight="false"
                android:gravity="center_vertical|center_horizontal"
                android:background="#21a2cc"
                android:padding="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:background="#21a2cc"
                android:paddingBottom="15dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:id="@+id/button16"
                    android:onClick="decreaseInteger2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0"
                    android:id="@+id/text2"
                    android:numeric="integer"
                    android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:background="#2986a4" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/button9"
                    android:onClick="increaseInteger2" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/c"
                android:id="@+id/textView15"
                android:textColor="#FFFFFF"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="15dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:id="@+id/button17"
                    android:onClick="decreaseInteger3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0"
                    android:id="@+id/text3"
                    android:numeric="integer"
                    android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:background="#2986a4" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/button18"
                    android:onClick="increaseInteger3" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/d"
                android:id="@+id/textView18"
                android:textColor="#FFFFFF"
                android:gravity="center_vertical|center_horizontal"
                android:background="#21a2cc"
                android:padding="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:background="#21a2cc"
                android:paddingBottom="15dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:id="@+id/button19"
                    android:onClick="decreaseInteger4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0"
                    android:id="@+id/text4"
                    android:layout_column="2"
                    android:numeric="integer"
                    android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:background="#2986a4" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/button20"
                    android:onClick="increaseInteger4" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/e"
                android:id="@+id/textView19"
                android:textColor="#FFFFFF"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="15dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:id="@+id/button21"
                    android:onClick="decreaseInteger5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0"
                    android:id="@+id/text5"
                    android:layout_column="2"
                    android:numeric="integer"
                    android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:background="#2986a4" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/button22"
                    android:onClick="increaseInteger5" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/f"
                android:id="@+id/textView22"
                android:textColor="#FFFFFF"
                android:gravity="center_vertical|center_horizontal"
                android:background="#21a2cc"
                android:padding="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:background="#21a2cc"
                android:paddingBottom="15dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:id="@+id/button23"
                    android:onClick="decreaseInteger6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0"
                    android:id="@+id/text6"
                    android:layout_column="2"
                    android:numeric="integer"
                    android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:background="#2986a4" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/button24"
                    android:onClick="increaseInteger6" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/g"
                android:id="@+id/textView24"
                android:textColor="#FFFFFF"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="15dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:id="@+id/button25"
                    android:onClick="decreaseInteger7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0"
                    android:id="@+id/text7"
                    android:layout_column="2"
                    android:numeric="integer"
                    android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:background="#2986a4" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/button26"
                    android:onClick="increaseInteger7" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/h"
                android:id="@+id/textView26"
                android:textColor="#FFFFFF"
                android:gravity="center_vertical|center_horizontal"
                android:background="#21a2cc"
                android:padding="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:background="#21a2cc"
                android:paddingBottom="15dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:id="@+id/button27"
                    android:onClick="decreaseInteger7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0"
                    android:id="@+id/text8"
                    android:layout_column="2"
                    android:numeric="integer"
                    android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:background="#2986a4" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/button28"
                    android:onClick="increaseInteger8" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:padding="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resetuj"
                    android:id="@+id/button30"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="reset"
                    android:padding="25dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zapisz"
                    android:id="@+id/button29"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="25dp"
                    android:onClick="save" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
